# doculoom-server

./: .env-template  .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
app/: main.py
app/core/: agent.py
app/core/models/: base.py  ollama.py  openai.py
app/helpers/: constants.py  logging.py  model_selector.py  types.py
app/routers/: docs.py  health.py
