[tool.poetry]
name = "doculoom-server"
version = "0.1.0"
description = ""
authors = ["Vinay Kudari <vinay@braveorbit.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.5.3"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
langchain = "^0.1.1"
openai = "^1.8.0"
langchain-openai = "^0.0.2.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
